--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,11 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.11</version>
         </dependency>
+        <dependency>
+            <groupId>net.masterthought</groupId>
+            <artifactId>cucumber-reporting</artifactId>
+            <version>5.3.1</version>
+        </dependency>
 
         <!-- Libraries for reading properties file -->
         <!-- https://mvnrepository.com/artifact/org.ini4j/ini4j -->
